# stm32f469i-disc

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: display_dsi_lcd.rs  fmc_sdram_test.rs  gpio_hal_blinky.rs
src/: led.rs  lib.rs  sdram.rs
