[package]
edition = "2021"
authors = ["Michael Fairman <mfairman@tegimeki.com>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the STM32F469 DISCOVERY kit"
#documentation = "https://docs.rs/crate/"
keywords = [
    "arm",
    "cortex-m",
    "template",
]
license = "0BSD"
name = "stm32f469i-disc"
repository = "https://gitlab.com/mfairman/stm32f469i-disc"
version = "0.1.0"
readme = "README.md"

[package.metadata.docs.rs]
features = []
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.2", features = ["print-rtt"] }
rtt-target = "0.4.0"
otm8009a = "0.1"

[dependencies.embedded-hal]
version = "1.0"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["stm32f469", "stm32-fmc", "dsihost"]
version = "0.21.0"
path="../../stm32f4xx-hal"

[dependencies.stm32-fmc]
default-features = false
version = "0.3.0"
features = ["sdram"]
path = "../../stm32-fmc" # NOTE: using branch with support for is42s32400f

[features]
fmc_sdram = []

# NOTE: default build is release-like for size/speed 
[profile.dev]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release]
debug = true
lto = true
opt-level = "s"
