[package]
edition = "2021"
authors = ["Michael Fairman <mfairman@tegimeki.com>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the STM32F469 DISCOVERY kit"
#documentation = "https://docs.rs/crate/"
keywords = [
    "arm",
    "cortex-m",
    "template",
]
license = "0BSD"
name = "stm32f469i-disc"
repository = "https://gitlab.com/mfairman/stm32f469i-disc"
version = "0.1.0"
readme = "README.md"

[package.metadata.docs.rs]
features = []
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.7.0"
defmt = { version = "0.3.4", optional = true }
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rtt-target = "0.5.0"
stm32-fmc = "0.3.2"
otm8009a = "0.1"

[dependencies.embedded-hal]
version = "1.0"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["stm32f469", "stm32-fmc", "dsihost", "defmt"]
version = "0.21.0"
path="../../stm32f4xx-hal" # pending next crate release

[dev-dependencies]
defmt = "0.3.4"
defmt-rtt = "0.4.0"

[features]
fmc_sdram_test = ["defmt"]
display_dsi_lcd = ["defmt"]
gpio_hal_blinky = ["defmt"]

# NOTE: default build is release-like for size/speed 
[profile.dev]
opt-level = 3
debug = true
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
#panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release]
debug = true
lto = true
opt-level = "s"
